--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="你的網站描述，簡短而有吸引力的介紹。">
+    <meta name="keywords" content="衣服,線上購物,品牌,男女衣服,品質保證">
+    <meta name="author" content="Esthetic_seoul">
+    <meta property="og:title" content="Esthetic_seoul">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Esthetic_seoul</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
